[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/bomb.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/bomb.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.5
height = 11.0

[sub_resource type="CircleShape2D" id=2]
radius = 78.0577

[node name="RigidBody2D" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.500001, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0.882353, 1, 1 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.992157, 1, 0, 1 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
